# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/en/

Version 9.0.0

  - WL#16342, Update MySQL error codes mapping.

  - WL#16353, Refresh the list of acceptable TLS ciphers.

  - Fix for Bug#114687 (Bug#36529541), Tests fail after mysql_native_password has been made optional in server.

  - WL#16319, Remove deprecated insensitive terminology based methods.

  - WL#16324, Update static MySQL keywords list.

  - Fix for Bug#110512 (Bug#35223851), Contribution: Replace synchronized with ReentrantLock.
    Thanks to Bart De Neuter and Janick Reynders for their contributions.

  - Fix for Bug#108830 (Bug#34721173), LIMIT clause, setMaxRows and cursor combined returns wrong number or rows.

Version 8.4.0

  - WL#15706, Add OpenTelemetry tracing.

  - WL#16174, Support for VECTOR data type.

  - Fix for Bug#36380711, Tests failing due to removal of deprecated features.

  - Fix for Bug#113600 (Bug#36171575), Contribution: Fix join condition for retrieval of imported primary keys.
    Thanks to Henning Pöttker for his contribution.

  - WL#16196, GPL License Exception Update.

  - Fix for Bug#111031 (Bug#35392222), Contribution: Update SyntaxRegressionTest.java.
    Thanks to Abby Palmero for her contribution.

  - Fix for Bug#113599 (Bug#36171571), Contribution: Replace StringBuffer with StringBuilder in ValueEncoders.
    Thanks to Henning Pöttker for his contribution.

  - Fix for Bug#91550 (Bug#28297874), DatabaseMetaData specifies incorrect extra name characters.

  - Fix for Bug#113129 (Bug#36043145), setting the FetchSize on a Statement object does not affect.

  - Fix for Bug#22931632, GETPARAMETERBINDINGS() ON A PS RETURNS NPE WHEN NOT ALL PARAMETERS ARE BOUND.

  - WL#16147, Remove support for FIDO authentication.

  - Fix for Bug#110286 (Bug#35152855), Only call Messages.getString(...) when it's needed (when the SQLException is thrown).
    Thanks to Janick Reynders for his contribution.
